[package]
name = "splitrc"
version = "0.1.0"
authors = ["Chad Austin <chad@chadaustin.me>"]
edition = "2021"
license = "MIT"
description = "Thread-Safe Split Reference Counts"
repository = "https://github.com/chadaustin/splitrc"
keywords = ["reference counting"]
categories = ["memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
